---
title: É de Comer? - Diagrama de Classes UML
---

classDiagram
    direction TB

    class Usuario {
        +id : String
        +nome : String
        +email : String
        +senhaHash : String
        +perfil : PerfilUsuario
        +avatarUrl : String
        +reputacao : Integer
        +dataCadastro : DateTime
        
        +login(email : String, senha : String)
        +registrar(nome : String, email : String, senha : String)
        +atualizarPerfil(dados : Object)
        +recuperarSenha(email : String)
    }
    
    class Planta {
        +id : String
        +nomePopular : String
        +nomeCientifico : String
        +descricao : String
        +comestivel : Boolean
        +medicinal : Boolean
        +nativa : Boolean
        +usos : String
        +cuidados : String
        +criadoEm : DateTime
        +atualizadoEm : DateTime
        
        +cadastrar(dados : Object, imagens : List)
        +atualizar(dados : Object)
        +buscar(filtros : Object)
        +avaliar(usuarioId : String, valor : Integer)
    }
    
    class Localizacao {
        +id : String
        +latitude : Float
        +longitude : Float
        +endereco : String
        +descricao : String
        +regiao : String
        +criadoEm : DateTime
    }
    
    class RegistroPlanta {
        +id : String
        +usuarioId : String
        +plantaId : String
        +localizacaoId : String
        +observacoes : String
        +status : StatusRegistro
        +dataRegistro : DateTime
        +atualizadoEm : DateTime
    }
    
    class Categoria {
        +id : String
        +nome : String
        +descricao : String
        +tipo : TipoCategoria
        +criadoEm : DateTime
    }
    
    class ImagemPlanta {
        +id : String
        +registroId : String
        +plantaId : String
        +url : String
        +nomeArquivo : String
        +contentType : String
        +tamanho : Integer
        +dataUpload : DateTime
    }
    
    class Comentario {
        +id : String
        +usuarioId : String
        +registroId : String
        +plantaId : String
        +texto : String
        +avaliacao : Integer
        +editado : Boolean
        +data : DateTime
        +atualizadoEm : DateTime
    }
    
    class Avaliacao {
        +id : String
        +usuarioId : String
        +plantaId : String
        +valor : Integer
        +criadoEm : DateTime
        +atualizadoEm : DateTime
    }
    
    class CategoriaPlanta {
        +id : String
        +plantaId : String
        +categoriaId : String
        +criadoEm : DateTime
    }

    
    %% Relacionamentos
    Usuario "1" -- "*" RegistroPlanta : registra
    Usuario "1" -- "*" Comentario : escreve
    Usuario "1" -- "*" Avaliacao : faz
    
    Planta "1" -- "*" RegistroPlanta : possui
    Planta "1" -- "*" CategoriaPlanta : categorizada
    Planta "1" -- "*" ImagemPlanta : contém
    Planta "1" -- "*" Comentario : recebe
    Planta "1" -- "*" Avaliacao : avaliada
    
    Localizacao "1" -- "*" RegistroPlanta : localiza
    Categoria "1" -- "*" CategoriaPlanta : classifica
    
    RegistroPlanta "1" -- "*" ImagemPlanta : tem
    RegistroPlanta "1" -- "*" Comentario : contém
    
    %% Many-to-Many explícito
    Planta "*" -- "*" Categoria : CategoriaPlanta
    

